# PFRL_impl

./: .gitignore  CarRacing_SAC.ipynb  Pong_DDQN.ipynb  VAE.ipynb  g.ipynb  pfrl_fromsclatch_train.ipynb  pfrl_script.ipynb  pfrl_tutorial.ipynb  pyproject.toml
agents/SAC_without_VAE/: temperature_holder.pt  temperature_optimizer.pt
result/: openaigym.manifest.0.7353.manifest.json  openaigym.manifest.1.7423.manifest.json  openaigym.manifest.1.7424.manifest.json  openaigym.manifest.1.7425.manifest.json  openaigym.manifest.1.7426.manifest.json  scores.txt
result/1000000_finish/: policy.pt  policy_optimizer.pt  q_func1.pt  q_func1_optimizer.pt  q_func2.pt  q_func2_optimizer.pt  target_q_func1.pt  target_q_func2.pt  temperature_holder.pt  temperature_optimizer.pt
result/best/: policy.pt  policy_optimizer.pt  q_func1.pt  q_func1_optimizer.pt  q_func2.pt  q_func2_optimizer.pt  target_q_func1.pt  target_q_func2.pt  temperature_holder.pt  temperature_optimizer.pt
torch_tameshi/: RGBImage_conv_tameshi.ipynb
