[tool.poetry]
name = "pfrl_impl"
version = "0.1.0"
description = ""
authors = ["wwwshwww <www.shinderu.www@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
pfrl = "^0.2.1"
pandas = "^1.2.4"
gym = {extras = ["box2d"], version = "^0.18.3"}
atari-py = {git = "https://github.com/Kojoley/atari-py.git"}
opencv-python = "^4.5.2"
torchvision = "^0.9.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
tqdm = "^4.60.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
